# Python-Carreiras-V2

./: .replit  LICENSE  app.py  database.py  pyproject.toml  requirements.txt
myenv/: pyvenv.cfg
static/: estilo.css
templates/: detalhevaga.html  home.html  inscricao_concluida.html
templates/includes/: footer.html  form_inscricao.html  navbar.html  vagas_item.html
